YTDB-558: review fixes + cleanup